src/objects/People__x.object
<CustomObject>
    <description>People</description>
    <externalDataSource>TripPinService</externalDataSource>
    <externalName>People</externalName>
    <fields>
        <fullName>AddressInfo__c</fullName>
        <description>AddressInfo</description>
        <externalDeveloperName>AddressInfo</externalDeveloperName>
        <label>AddressInfo</label>
        <length>32000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Concurrency__c</fullName>
        <description>Concurrency</description>
        <externalDeveloperName>Concurrency</externalDeveloperName>
        <label>Concurrency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails__c</fullName>
        <description>Emails</description>
        <externalDeveloperName>Emails</externalDeveloperName>
        <label>Emails</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>FirstName</description>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>FirstName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender</description>
        <externalDeveloperName>Gender</externalDeveloperName>
        <label>Gender</label>
        <length>128</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>LastName</description>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>LastName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <description>UserName</description>
        <externalDeveloperName>UserName</externalDeveloperName>
        <label>UserName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>People</label>
    <pluralLabel>People</pluralLabel>
</CustomObject>